# financial-rag-poc

./: Dockerfile  README.md  load_data.py  pyproject.toml
app/: main.py
app/services/: vector_search.py
app/services/config_metadata/: metadata_config.json
